--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -10,10 +10,10 @@ default:
     # uv run python source_download.py beflanders
     # uv run python source_download.py bewallonie
     # uv run python source_download.py cz
+    # uv run python source_download.py debayern
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
-
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     
@@ -30,6 +30,7 @@ default:
     # uv run python source_bounds.py beflanders
     # uv run python source_bounds.py bewallonie
     # uv run python source_bounds.py cz
+    # uv run python source_bounds.py debayern
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
