--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -12,6 +12,7 @@ default:
     # uv run python source_download.py cz
     # uv run python source_download.py debayern
     # uv run python source_download.py deniedersachsen
+    # uv run python source_download.py ee
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -33,6 +34,7 @@ default:
     # uv run python source_bounds.py cz
     # uv run python source_bounds.py debayern
     # uv run python source_bounds.py niedersachsen
+    # uv run python source_bounds.py ee
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
