--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -13,9 +13,11 @@ default:
     # uv run python source_download.py debayern
     # uv run python source_download.py deniedersachsen
     # uv run python source_download.py ee
+    # uv run python source_download.py tinitaly
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
+    # uv run python source_unzip.py tinitaly
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     
@@ -35,6 +37,7 @@ default:
     # uv run python source_bounds.py debayern
     # uv run python source_bounds.py niedersachsen
     # uv run python source_bounds.py ee
+    # uv run python source_bounds.py tinitaly
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
