--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -22,6 +22,7 @@ default:
     # uv run python source_download.py frrgealti5guiana
     # uv run python source_download.py frrgealti5mayotte
     # uv run python source_download.py demv
+    # uv run python source_download.py deberlin
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -33,6 +34,7 @@ default:
     # uv run python source_unzip.py frrgealti5metro
     # uv run python source_unzip.py frrgealti5guiana
     # uv run python source_unzip.py frrgealti5mayotte
+    # uv run python source_unzip.py deberlin
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     # uv run python source_set_crs.py frrgealti5corse EPSG:2154
@@ -42,11 +44,15 @@ default:
     # uv run python source_set_crs.py frrgealti5metro EPSG:2154
     # uv run python source_set_crs.py frrgealti5guiana EPSG:2972
     # uv run python source_set_crs.py frrgealti5mayotte EPSG:4471
+    # uv run python source_set_crs.py deberlin EPSG:25833
     
     # uv run python source_set_nodata.py atkaernten 0.0
     # uv run python source_set_nodata.py demv -9999
+    # uv run python source_set_nodata.py deberlin -9999
 
     # uv run python source_to_cog.py bewallonie
+
+    # uv run python source_fix_orientation.py deberlin
 
     # uv run python source_bounds.py glo30
     # uv run python source_bounds.py swissalti3d
@@ -70,6 +76,7 @@ default:
     # uv run python source_bounds.py frrgealti5guiana
     # uv run python source_bounds.py frrgealti5mayotte
     # uv run python source_bounds.py demv
+    # uv run python source_bounds.py deberlin
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
