--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -23,6 +23,7 @@ default:
     # uv run python source_download.py frrgealti5mayotte
     # uv run python source_download.py demv
     # uv run python source_download.py deberlin
+    # uv run python source_download.py debrandenburg
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -35,6 +36,7 @@ default:
     # uv run python source_unzip.py frrgealti5guiana
     # uv run python source_unzip.py frrgealti5mayotte
     # uv run python source_unzip.py deberlin
+    # uv run python source_unzip.py debrandenburg
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     # uv run python source_set_crs.py frrgealti5corse EPSG:2154
@@ -77,6 +79,7 @@ default:
     # uv run python source_bounds.py frrgealti5mayotte
     # uv run python source_bounds.py demv
     # uv run python source_bounds.py deberlin
+    # uv run python source_bounds.py debrandenburg
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
