--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -24,6 +24,7 @@ default:
     # uv run python source_download.py demv
     # uv run python source_download.py deberlin
     # uv run python source_download.py debrandenburg
+    # uv run python source_download.py desachsen
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -37,6 +38,9 @@ default:
     # uv run python source_unzip.py frrgealti5mayotte
     # uv run python source_unzip.py deberlin
     # uv run python source_unzip.py debrandenburg
+    # uv run python source_unzip.py desachsen
+
+    # uv run python source_to_cog.py bewallonie
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     # uv run python source_set_crs.py frrgealti5corse EPSG:2154
@@ -47,12 +51,10 @@ default:
     # uv run python source_set_crs.py frrgealti5guiana EPSG:2972
     # uv run python source_set_crs.py frrgealti5mayotte EPSG:4471
     # uv run python source_set_crs.py deberlin EPSG:25833
-    
+
     # uv run python source_set_nodata.py atkaernten 0.0
     # uv run python source_set_nodata.py demv -9999
     # uv run python source_set_nodata.py deberlin -9999
-
-    # uv run python source_to_cog.py bewallonie
 
     # uv run python source_fix_orientation.py deberlin
 
@@ -80,6 +82,7 @@ default:
     # uv run python source_bounds.py demv
     # uv run python source_bounds.py deberlin
     # uv run python source_bounds.py debrandenburg
+    # uv run python source_bounds.py desachsen
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
