--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -26,6 +26,7 @@ default:
     # uv run python source_download.py debrandenburg
     # uv run python source_download.py desachsen
     # uv run python source_download.py dehamburg
+    # uv run python source_download.py debremen
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -41,6 +42,7 @@ default:
     # uv run python source_unzip.py debrandenburg
     # uv run python source_unzip.py desachsen
     # unzip dehamburg unzip by hand, it has a nested zip file
+    # uv run python source_unzip.py debremen
 
     # uv run python source_to_cog.py bewallonie
     # uv run python source_to_cog.py dehamburg
@@ -55,11 +57,13 @@ default:
     # uv run python source_set_crs.py frrgealti5mayotte EPSG:4471
     # uv run python source_set_crs.py deberlin EPSG:25833
     # uv run python source_set_crs.py dehamburg EPSG:25832
+    # uv run python source_set_crs.py debremen EPSG:25832
 
     # uv run python source_set_nodata.py atkaernten 0.0
     # uv run python source_set_nodata.py demv -9999
     # uv run python source_set_nodata.py deberlin -9999
     # uv run python source_set_nodata.py dehamburg 0.0
+    # uv run python source_set_nodata.py debremen 0.0
 
     # uv run python source_fix_orientation.py deberlin
     # uv run python source_fix_orientation.py dehamburg
@@ -90,6 +94,7 @@ default:
     # uv run python source_bounds.py debrandenburg
     # uv run python source_bounds.py desachsen
     # uv run python source_bounds.py dehamburg
+    # uv run python source_bounds.py debremen
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
