--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -28,6 +28,7 @@ default:
     # uv run python source_download.py dehamburg
     # uv run python source_download.py debremen
     # uv run python source_download.py dehessen
+    # uv run python source_download.py lu
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -45,6 +46,8 @@ default:
     # unzip dehamburg unzip by hand, it has a nested zip file
     # uv run python source_unzip.py debremen
     # uv run python source_unzip.py dehessen
+    # uv run python source_unzip.py lu
+    # rm source-store/lu/MNT_Z3_Z4_Luref_NGL.tif # this file has a different resolution
 
     # uv run python source_to_cog.py bewallonie
     # uv run python source_to_cog.py dehamburg
@@ -100,6 +103,7 @@ default:
     # uv run python source_bounds.py dehamburg
     # uv run python source_bounds.py debremen
     # uv run python source_bounds.py dehessen
+    # uv run python source_bounds.py lu
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
