--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -38,6 +38,10 @@ default:
     # uv run python source_download.py derlp
     # uv run python source_download.py dk # no public download yet
     # uv run python source_download.py si
+    # uv run python source_download.py es5a # no public download yet
+    # uv run python source_download.py es5b # no public download yet
+    # uv run python source_download.py es5c # no public download yet
+    # uv run python source_download.py es5d # no public download yet
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -65,6 +69,10 @@ default:
     # uv run python source_to_cog.py bewallonie
     # uv run python source_to_cog.py dehamburg
     # uv run python source_to_cog.py si
+    # uv run python source_to_cog.py es5a
+    # uv run python source_to_cog.py es5b
+    # uv run python source_to_cog.py es5c
+    # uv run python source_to_cog.py es5d
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     # uv run python source_set_crs.py frrgealti5corse EPSG:2154
@@ -130,6 +138,10 @@ default:
     # uv run python source_bounds.py derlp
     # uv run python source_bounds.py dk
     # uv run python source_bounds.py si
+    # uv run python source_bounds.py es5a
+    # uv run python source_bounds.py es5b
+    # uv run python source_bounds.py es5c
+    # uv run python source_bounds.py es5d
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
