--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -45,6 +45,7 @@ default:
     # uv run python source_download.py aalv
     # uv run python source_download.py ro
     # uv run python source_download.py debw
+    # uv run python source_download.py desaarland
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -71,6 +72,7 @@ default:
     # uv run python source_unzip.py aalv # sparse txt file, convert to tif by filling a matrix
     # uv run python source_unzip_ro.py
     # uv run python source_unzip.py debw # translate only the .xyz files
+    # uv run python source_unzip.py desaarland
 
     # uv run python source_to_cog.py bewallonie
     # uv run python source_to_cog.py dehamburg
@@ -157,6 +159,7 @@ default:
     # uv run python source_bounds.py aalv
     # uv run python source_bounds.py ro
     # uv run python source_bounds.py debw
+    # uv run python source_bounds.py desaarland
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
