--- a/pipelines/Justfile
+++ b/pipelines/Justfile
@@ -60,6 +60,7 @@ default:
     # uv run python source_download.py itsardegnacostiera
     # uv run python source_download.py itsardegnaurban
     # uv run python source_download.py se # no public download yet
+    # uv run python source_download.py itsicily # no public download yet
 
     # uv run python source_unzip.py bewallonie
     # uv run python source_unzip.py cz
@@ -110,6 +111,7 @@ default:
     # uv run python source_to_cog.py desh
     # uv run python source_to_cog.py sk
     # uv run python source_to_cog.py se
+    # uv run python source_to_cog.py itsicily
 
     # uv run python source_set_crs.py atsalzburg EPSG:31258
     # uv run python source_set_crs.py frrgealti5corse EPSG:2154
@@ -214,6 +216,7 @@ default:
     # uv run python source_bounds.py itsardegnacostiera
     # uv run python source_bounds.py itsardegnaurban
     # uv run python source_bounds.py se
+    # uv run python source_bounds.py itsicily
 
     # uv run python aggregation_covering.py
     # uv run python downsampling_covering.py
