--- a/source-catalog/au5a/Justfile
+++ b/source-catalog/au5a/Justfile
@@ -1,11 +1,14 @@
 # Source preparation pipeline to be run from mapterhorn/pipelines folder
+
+source := file_name(justfile_directory())
+
 [no-cd]
 default:
-    uv run python source_download.py au5/epsg6737
-    uv run python source_unzip.py au5/epsg6737
-    uv run python source_verify_crs.py au5/epsg6737
-    uv run python source_slice.py au5/epsg6737 16384
-    uv run python source_to_cog.py au5/epsg6737
-    uv run python source_bounds.py au5/epsg6737
-    uv run python source_polygonize.py au5/epsg6737 32
-    uv run python source_create_tarball.py au5/epsg6737
+    uv run python source_download.py {{source}}
+    uv run python source_unzip.py {{source}}
+    uv run python source_verify_crs.py {{source}}
+    uv run python source_slice.py {{source}} 16384
+    uv run python source_to_cog.py {{source}}
+    uv run python source_bounds.py {{source}}
+    uv run python source_polygonize.py {{source}} 32
+    uv run python source_create_tarball.py {{source}}
