--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -13,9 +13,17 @@ dependencies = [
     "python-ulid>=1.1.0",
     "rasterio>=1.3.11",
     "requests>=2.32.4",
-<<<<<<< HEAD
-=======
     "ruff>=0.14.13",
->>>>>>> f1c1f86 (add ruff)
     "scipy>=1.10.1",
+]
+
+[tool.ruff.format]
+quote-style = "single"
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort (import sorting)
 ]
