--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
+    "huggingface-hub>=0.36.0",
     "imagecodecs>=2023.3.16",
     "mercantile>=1.2.1",
     "numpy>=1.24.4",
