--- a/source-catalog/us1b/Justfile
+++ b/source-catalog/us1b/Justfile
@@ -1,14 +1,12 @@
 # Source preparation pipeline to be run from mapterhorn/pipelines folder
 
-source := file_name(justfile_directory())
-
 [no-cd]
 default:
-    uv run python source_download.py {{source}}
-    uv run python source_unzip.py {{source}}
-    uv run python source_verify_crs.py {{source}}
-    uv run python source_slice.py {{source}} 16384
-    uv run python source_to_cog.py {{source}}
-    uv run python source_bounds.py {{source}}
-    uv run python source_polygonize.py {{source}} 32
-    uv run python source_create_tarball.py {{source}}
+    uv run python source_download.py us1b
+    uv run python source_unzip.py us1b
+    uv run python source_verify_crs.py us1b
+    uv run python source_slice.py us1b 16384
+    uv run python source_to_cog.py us1b
+    uv run python source_bounds.py us1b
+    uv run python source_polygonize.py us1b 32
+    uv run python source_create_tarball.py us1b
