define discrete justfiles for all sources

--- a/source-catalog/au5c/Justfile
+++ b/source-catalog/au5c/Justfile
@@ -1,1 +1,12 @@
-../au5a/Justfile
+# Source preparation pipeline to be run from mapterhorn/pipelines folder
+
+[no-cd]
+default:
+    uv run python source_download.py au5c
+    uv run python source_unzip.py au5c
+    uv run python source_verify_crs.py au5c
+    uv run python source_slice.py au5c 16384
+    uv run python source_to_cog.py au5c
+    uv run python source_bounds.py au5c
+    uv run python source_polygonize.py au5c 32
+    uv run python source_create_tarball.py au5c
