--- a/source-catalog/au5a/Justfile
+++ b/source-catalog/au5a/Justfile
@@ -1,14 +1,12 @@
 # Source preparation pipeline to be run from mapterhorn/pipelines folder
 
-source := file_name(justfile_directory())
-
 [no-cd]
 default:
-    uv run python source_download.py {{source}}
-    uv run python source_unzip.py {{source}}
-    uv run python source_verify_crs.py {{source}}
-    uv run python source_slice.py {{source}} 16384
-    uv run python source_to_cog.py {{source}}
-    uv run python source_bounds.py {{source}}
-    uv run python source_polygonize.py {{source}} 32
-    uv run python source_create_tarball.py {{source}}
+    uv run python source_download.py au5a
+    uv run python source_unzip.py au5a
+    uv run python source_verify_crs.py au5a
+    uv run python source_slice.py au5a 16384
+    uv run python source_to_cog.py au5a
+    uv run python source_bounds.py au5a
+    uv run python source_polygonize.py au5a 32
+    uv run python source_create_tarball.py au5a
