--- a/source-catalog/au5h/Justfile
+++ b/source-catalog/au5h/Justfile
@@ -1,1 +1,12 @@
-../au5a/Justfile
+# Source preparation pipeline to be run from mapterhorn/pipelines folder
+
+[no-cd]
+default:
+    uv run python source_download.py au5h
+    uv run python source_unzip.py au5h
+    uv run python source_verify_crs.py au5h
+    uv run python source_slice.py au5h 16384
+    uv run python source_to_cog.py au5h
+    uv run python source_bounds.py au5h
+    uv run python source_polygonize.py au5h 32
+    uv run python source_create_tarball.py au5h
